--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,22 @@ body {
   height: 100vh;
 }
 
+fieldset {
+	border: 0;
+	border-top: 1px solid #ccc;
+	display: inline-block;
+	padding-left: 0;
+	padding-right: 0;
+	margin: 0;
+	margin-right: 1em;
+}
+
+legend {
+	padding-left: 0;
+	padding-right: 0.5em;
+	font-weight: bold;
+}
+
 #single {
 	width: 100%
 }
