--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 body {
-	font-family: 'Roboto', 'Helvetica Neue Regular', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: Roboto, sans-serif;
+	font-size: 90%;
   height: 100vh;
 	margin: 0;
 	padding: 0;
@@ -21,6 +22,7 @@ fieldset {
 }
 
 label {
+	color: #999;
 	font-size: 0.9em;
 	white-space: nowrap;
 }
@@ -33,7 +35,9 @@ select {
 	padding: 0;
 	border: none;
 	border-bottom: 2px solid #ccc;
-	font-family: 'Roboto', 'Helvetica Neue Regular', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: Roboto, sans-serif;
+	margin-right: 1em;
+	font-size: 1em;
 }
 
 legend {
