--- a/styles/main.css
+++ b/styles/main.css
@@ -75,5 +75,11 @@ legend {
 }
 
 .loading {
-	opacity: 0.5;
+	animation: fadeout 2s;
+	animation-fill-mode: forwards;
+}
+
+@keyframes fadeout {
+    from { opacity: 1; }
+    to   { opacity: 0.3; }
 }
