--- a/styles/main.css
+++ b/styles/main.css
@@ -106,12 +106,13 @@ img[onclick] {
 
 .m3 > .angle { top: 50px; left: 30px; }
 
+.m3 > .front.angle > .shadow { top: 145px; left: -100px; }
 .m3 > .front.angle > .wheels > img { top: 96px; left: 186px; }
 .m3 > .front.angle > .front.door.left > img.closed { top: 14px;	left: 306px; }
-.m3 > .front.angle > .front.door.left > img.open { top: 6px;	left: 295px; }
+.m3 > .front.angle > .front.door.left > img.open { top: 6px; left: 295px; }
 .m3 > .front.angle > .front.door.right > img.open { top: 9px;	left: 110px; }
-.m3 > .front.angle > .rear.door.left > img.closed { top: 13px;	left: 428px; }
-.m3 > .front.angle > .rear.door.left > img.open { top: 12px;	left: 390px; }
+.m3 > .front.angle > .rear.door.left > img.closed { top: 13px; left: 428px; }
+.m3 > .front.angle > .rear.door.left > img.open { top: 12px; left: 390px; }
 .m3 > .front.angle > .hood > img.open { top: -28px;	left: 20px; }
 .m3 > .front.angle > .hood > img.closed { top: 74px; left: 19px; }
 .m3 > .front.angle > .trunk > img.open { top: -50px; left: 400px; }
@@ -123,15 +124,19 @@ img[onclick] {
 .rear.angle > .hood > img { z-index: 55; }
 .rear.angle > img.body { z-index: 50; }
 .rear.angle > .wheels > img { z-index: 55; }
+.rear.angle > .chargeport > img { z-index: 300; }
 
+.m3 > .rear.angle > .shadow { top: 118px; left: -67px; }
 .m3 > .rear.angle > .wheels > img { top: 94px; left: 10px; }
-.m3 > .rear.angle > .front.door.left > img.closed { top: 17px;	left: 85px; }
-.m3 > .rear.angle > .front.door.left > img.open { top: 10px;	left: 0px; }
+.m3 > .rear.angle > .front.door.left > img.closed { top: 17px; left: 85px; }
+.m3 > .rear.angle > .front.door.left > img.open { top: 10px; left: 0px; }
 .m3 > .rear.angle > .rear.door.left > img.closed { top: 17px;	left: 201px; }
 .m3 > .rear.angle > .rear.door.left > img.open { top: 20px;	left: 160px; }
 .m3 > .rear.angle > .hood > img.open { top: -26px; left: 46px; }
 .m3 > .rear.angle > .hood > img.closed { top: 60px; left: 80px; }
 .m3 > .rear.angle > .trunk > img.open { top: -65px; left: 418px; }
 .m3 > .rear.angle > .trunk > img.closed { top: 34px; left: 400px; }
+.m3 > .rear.angle > .chargeport > img.open { top: 67px; left: 427px; }
+.m3 > .rear.angle > .chargeport > img.closed { top: 90px; left: 425px; }
 
 .m3 > .front.side > .wheels > img { top: 85px; left: 46px; }
