--- a/styles/main.css
+++ b/styles/main.css
@@ -97,6 +97,14 @@ img[onclick] {
 	left: 0
 }
 
+img {
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-o-user-select: none;
+	user-select: none;
+}
+
 .front.angle > .front.door.right > img { z-index: 40; }
 .front.angle > .front.door.left > img { z-index: 200; }
 .front.angle > .rear.door.left > img { z-index: 100; }
