--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,7 @@
 body {
 	background-color: #eee;
 	color: #111;
-	font-family: Roboto, sans-serif;
+	font-family: 'Fira Sans Condensed', sans-serif;
 	font-size: 90%;
   height: 100vh;
 	margin: 0;
@@ -9,8 +9,8 @@ body {
 }
 
 form {
-	margin: 2px 0.5em;
 	border-bottom: 1px solid #fff;
+	margin: 2px 0.5em;
 }
 
 fieldset {
@@ -19,30 +19,27 @@ fieldset {
 	display: inline-block;
 	padding-left: 0;
 	padding-right: 0;
-	margin: 0;
-	margin-right: 1em;
+	margin: 0 1em 0 0 ;
 }
 
 label {
-	color: #999;
+	color: #666;
 	font-size: 0.9em;
+	margin-right: 0.5em;
 	white-space: nowrap;
-}
-
-#spoiler {
-	color: #111;
 }
 
 select {
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	appearance: none;
-	margin: 0;
-	padding: 0 0.5em;
 	border: none;
 	border-bottom: 2px solid #ccc;
-	font-family: Roboto, sans-serif;
+	font-family: 'Fira Sans Condensed', sans-serif;
 	font-size: 1em;
+	font-weight: 400;
+	margin: 0;
+	padding: 0 0.3em;
 }
 
 legend {
